[tool.poetry]
name = "projecteuler"
version = "0.1.0"
description = "Project Euler Solutions"
authors = ["Ryan Lau <ryanlau394@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
